# UnityDirectoryReader

./: CMakeLists.txt  main.cpp
headers/: DirectoryParser.h  ObjectFromScene.h  SceneParser.h
src/: DirectoryParser.cpp  ObjectFromScene.cpp  SceneParser.cpp
